fixed the layout issue of project 3 and 4 cards

--- a/scss&css/layout.scss
+++ b/scss&css/layout.scss
@@ -110,16 +110,12 @@
       gap: 20px;
       background: none;
 
-      @media screen and (max-width: 800px) {
-        flex-direction: column;
-      }
-
       &--projects-3-and-4 {
         flex-direction: row-reverse;
+      }
 
-        @media screen and (max-width: 800px) {
-          flex-direction: column-reverse;
-        }
+      @media screen and (max-width: 800px) {
+        flex-direction: column;
       }
     }
   }
